[gd_scene load_steps=6 format=3 uid="uid://di1poe4binlhf"]

[ext_resource type="Texture2D" uid="uid://bqi2lp3cqjuti" path="res://FireWorld/sprites/Images/MÃ‰TODO DE PAGO (1).png" id="1_026mt"]
[ext_resource type="Script" uid="uid://dyw084pwlp8t5" path="res://FireWorld/Scripts/select_character.gd" id="1_yfxkk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_026mt"]
bg_color = Color(0, 0.443542, 0.270328, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laycw"]
bg_color = Color(7.46027e-07, 0.447044, 0.254444, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxhee"]
animations = []

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfxkk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576.5, 323.5)
scale = Vector2(1.64714, 1.298)
texture = ExtResource("1_026mt")

[node name="Infrantyman" type="Button" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 152.0
offset_right = 584.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_026mt")
text = "Infrantyman
"

[node name="Destroyer" type="Button" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 255.0
offset_right = 584.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_026mt")
text = "Destroyer
"

[node name="Swordsman" type="Button" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 367.0
offset_right = 582.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_026mt")
text = "Swordsman
"

[node name="Select" type="Button" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 512.0
offset_right = 519.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_laycw")
text = "Select"

[node name="Sprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(882, 246)
scale = Vector2(5.40332, 5.3418)
sprite_frames = SubResource("SpriteFrames_bxhee")
animation = &""

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 6.0
offset_right = 141.0
offset_bottom = 42.0
text = "Volver"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 196.0
offset_right = 704.0
offset_bottom = 400.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 359.0
offset_top = 208.0
offset_right = 711.0
offset_bottom = 379.0
theme_override_font_sizes/font_size = 40
text = "You have 
to select a 
character"
horizontal_alignment = 1

[connection signal="pressed" from="Infrantyman" to="." method="_on_infrantyman_pressed"]
[connection signal="pressed" from="Destroyer" to="." method="_on_destroyer_pressed"]
[connection signal="pressed" from="Swordsman" to="." method="_on_swordsman_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Select" to="." method="Select"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
